[BI-245] fix z-index for header (#1318)

--- a/lms/static/sass/common/_theme-header.scss
+++ b/lms/static/sass/common/_theme-header.scss
@@ -3,7 +3,7 @@
     padding: 22px 0 23px;
     border-bottom: none;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.75);
-    z-index: 2;
+    z-index: 10;
 
     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
         overflow-x: hidden;
